--- a/SoundVisualizer3D/MainWindow.xaml
+++ b/SoundVisualizer3D/MainWindow.xaml
@@ -29,13 +29,17 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <ListView Grid.Column="0" Height="30" Width="600" ItemsSource="{Binding Files}" 
                       HorizontalAlignment="Left" Margin="5,1,5,1"
                       SelectedItem="{Binding SelectedFile}">
             </ListView>
-            <Button Grid.Column="1" Content="Play" Height="30" Width="100" Margin="1" Click="OnPlay_Clicked"></Button>
-            <Button Grid.Column="2" Content="Stop" Height="30" Width="100" Margin="1" Click="OnStop_Clicked"></Button>
+            <Slider Grid.Column="1" Value="{Binding CurrentPosition, Mode=TwoWay}" Maximum="{Binding TrackLength}" Width="350"
+                    HorizontalAlignment="Left" VerticalAlignment="Center"
+                    Margin="5,0,5,0"></Slider>
+            <Button Grid.Column="2" Content="Play" Height="30" Width="100" Margin="1" Click="OnPlay_Clicked"></Button>
+            <Button Grid.Column="3" Content="Stop" Height="30" Width="100" Margin="1" Click="OnStop_Clicked"></Button>
         </Grid>
 
     </Grid>
