--- a/SoundVisualizer3D/App.xaml
+++ b/SoundVisualizer3D/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="SoundVisualizer3D.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SoundVisualizer3D"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
