--- a/SoundVisualizer3D/Views/MainWindow.xaml
+++ b/SoundVisualizer3D/Views/MainWindow.xaml
@@ -5,24 +5,24 @@
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
                       mc:Ignorable="d"
-                      Title="SoundVisualizer3D" Height="600" Width="1024">
+                      Title="SoundVisualizer3D" Height="700" Width="1280">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="37"></RowDefinition>
+            <RowDefinition Height="100"></RowDefinition>
         </Grid.RowDefinitions>
 
         <ItemsControl Margin="0,0,0,5"
                       Grid.Row="0"
                       VerticalAlignment="Bottom"
                       ItemsSource="{Binding FrequenciesValues}">
-            
+
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
-            
+
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Rectangle Height="{Binding}"
@@ -34,41 +34,46 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
+       
+        <Grid Grid.Row="1" Height="100">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+            </Grid.RowDefinitions>
 
-        <Grid Grid.Row="1"
-              Height="35">
-            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            
-            <ListView Grid.Column="0"
-                      Height="30"
+            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" Grid.ColumnSpan="2">
+                <Image Width="75" Height="75" Source="{Binding Image}"></Image>
+                <ListView 
+                      Height="75"
                       Width="600"
                       ItemsSource="{Binding Files}" 
                       HorizontalAlignment="Left"
                       Margin="5,1,5,1"
                       SelectedItem="{Binding SelectedFile}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding}" />
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            
-            <Slider Grid.Column="1"
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding}" />
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding SongInfo}"></TextBlock>
+            <Slider Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3"
                     Value="{Binding CurrentPosition, Mode=TwoWay}"
                     Maximum="{Binding TrackLength}"
                     Width="350"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     Margin="5,0,5,0" />
-            
-            <Button Grid.Column="2" Content="Play" Height="30" Width="100" Margin="1" Command="{Binding OnPlayCommand}" />
-            <Button Grid.Column="3" Content="Stop" Height="30" Width="100" Margin="1" Command="{Binding OnStopCommand}" />
+
+            <Button Grid.Column="2" Grid.Row="1" Content="Play" Height="30" Width="100" Margin="1" Command="{Binding OnPlayCommand}" />
+            <Button Grid.Column="3" Grid.Row="1" Content="Stop" Height="30" Width="100" Margin="1" Command="{Binding OnStopCommand}" />
         </Grid>
     </Grid>
 
