--- a/SoundVisualizer3D/Views/MainWindow.xaml
+++ b/SoundVisualizer3D/Views/MainWindow.xaml
@@ -4,21 +4,42 @@
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:views="clr-namespace:SoundVisualizer3D.Views"
+                      xmlns:viewModels="clr-namespace:SoundVisualizer3D.ViewModels"
                       mc:Ignorable="d"
-                      Title="SoundVisualizer3D" Height="700" Width="1280">
+                      Title="SoundVisualizer3D"
+                      Height="768"
+                      Width="1024">
+    
+    <controls:MetroWindow.Resources>
+        <DataTemplate DataType="{x:Type viewModels:ViewportViewModel}">
+            <views:ViewportView />
+        </DataTemplate>
+    </controls:MetroWindow.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="110"></RowDefinition>
+            <RowDefinition Height="10" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="110" />
         </Grid.RowDefinitions>
+
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" HorizontalAlignment="Left" FontSize="8" Margin="1,0,0,0">L</TextBlock>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Right" FontSize="8"  Margin="0,0,0,1">R</TextBlock>
+
+            <TextBlock Grid.Column="0"
+                       HorizontalAlignment="Left"
+                       FontSize="8"
+                       Margin="1,0,0,0"
+                       Text="L" />
+            <TextBlock Grid.Column="1"
+                       HorizontalAlignment="Right"
+                       FontSize="8"
+                       Margin="0,0,0,1"
+                       Text="R" />
             <Rectangle Grid.Column ="0" Height="8"
                                Width="{Binding LeftChannelLevel}"
                                Fill="CornflowerBlue"
@@ -28,7 +49,8 @@
                                Fill="CornflowerBlue"
                                Margin="1,1,0,1" HorizontalAlignment="Left"></Rectangle>
         </Grid>
-        <ItemsControl Margin="0,0,0,5"
+
+        <!--<ItemsControl Margin="0,0,0,5"
                       Grid.Row="1"
                       VerticalAlignment="Bottom"
                       ItemsSource="{Binding FrequenciesValues}">
@@ -49,12 +71,19 @@
                     </Rectangle>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
-        </ItemsControl>
+        </ItemsControl>-->
 
-        <Grid Grid.Row="2" Height="110">
+        <ContentPresenter x:Name="ViewportContent"
+                          Margin="0,0,0,5"
+                          Grid.Row="1"
+                          VerticalAlignment="Stretch"
+                          HorizontalAlignment="Stretch" />
+
+        <Grid Grid.Row="2"
+              Height="110">
             <Grid.RowDefinitions>
-                <RowDefinition Height="75"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="75" />
+                <RowDefinition Height="35" />
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
@@ -64,7 +93,10 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <ListView Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+
+            <ListView Grid.Column="0"
+                      Grid.Row="0"
+                      Grid.RowSpan="2"
                       Height="110"
                       Width="800"
                       ItemsSource="{Binding Files}" 
@@ -77,20 +109,42 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Image Grid.Column="1" Grid.Row="0" Width="75" Height="75" HorizontalAlignment="Left" Source="{Binding Image}"></Image>
 
-            <Slider Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="3"
+            <Image Grid.Column="1"
+                   Grid.Row="0"
+                   Width="75"
+                   Height="75"
+                   HorizontalAlignment="Left"
+                   Source="{Binding Image}" />
+
+            <Slider Grid.Column="2"
+                    Grid.Row="0"
+                    Grid.ColumnSpan="3"
                     Value="{Binding CurrentPosition, Mode=TwoWay}"
                     Maximum="{Binding TrackLength}"
                     Width="350"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     Margin="5,0,5,0" />
-            <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="5,0,0,0"  Text="{Binding SongInfo}"></TextBlock>
-            <StackPanel Grid.Column="4" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-
-                <Button  Content="Play" Height="30" Width="100" Margin="1" Command="{Binding OnPlayCommand}" />
-                <Button  Content="Stop" Height="30" Width="100" Margin="1" Command="{Binding OnStopCommand}" />
+            <TextBlock Grid.Row="1"
+                       Grid.Column="1"
+                       Grid.ColumnSpan="2"
+                       Margin="5,0,0,0"
+                       Text="{Binding SongInfo}" />
+            <StackPanel Grid.Column="4"
+                        Grid.Row="1"
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Right">
+                <Button Content="Play"
+                        Height="30"
+                        Width="100"
+                        Margin="1"
+                        Command="{Binding OnPlayCommand}" />
+                <Button Content="Stop"
+                        Height="30"
+                        Width="100"
+                        Margin="1"
+                        Command="{Binding OnStopCommand}" />
             </StackPanel>
         </Grid>
     </Grid>
